MODIFY func renamed to verbs for scripts

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,9 +22,9 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
-brain-even = "brain_games.scripts.brain_even:even_or_no"
-brain-calc = "brain_games.scripts.brain_calc:calculate"
-brain-gcd = "brain_games.scripts.brain_gcd:find_gcd"
-brain-progression = "brain_games.scripts.brain_progression:progression"
-brain-prime = "brain_games.scripts.brain_prime:prime_or_no"
+brain-even = "brain_games.scripts.brain_even:play_even"
+brain-calc = "brain_games.scripts.brain_calc:play_calc"
+brain-gcd = "brain_games.scripts.brain_gcd:play_gcd"
+brain-progression = "brain_games.scripts.brain_progression:play_progression"
+brain-prime = "brain_games.scripts.brain_prime:play_prime"
 brain-start = "brain_games.scripts.all_games:main"
